--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet"/>
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
@@ -14,9 +15,9 @@
         <div class="container">
           <h1 class="name">Student name</h1>
           <ul class="main-nav">
-            <li>Home</li>
-            <li>Portfoilio</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </header>
@@ -35,7 +36,7 @@
             </p>
           </div>
         </section>
-
+<main>
         <section class="portfolio">
           <h2>Portfolio</h2>
           <div>
@@ -115,7 +116,7 @@
         </section>
       </div>
     </div>
-
+  </main> 
     <footer class="main-footer">
       <h2>Student name</h2>
       <nav>Back to top</nav>
