--- a/index.html
+++ b/index.html
@@ -7,25 +7,22 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet"/>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>Student Name</title>
   </head>
   <body>
-    <div class="push">
-      <header class="main-header">
-        <div class="container">
-          <h1 class="name">Student name</h1>
+      <nav id="home">
+          <h1 class="name">Student Name</h1>
           <ul class="main-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div>
-      </header>
+        </nav>
 
       <div class="container">
         <section class="profile">
           <div class="profile-info">
-            <img
+            <img class="profile-img"
               src="images/responsive-layout-profile.png"
               alt="profile picture"
             />
@@ -37,7 +34,7 @@
           </div>
         </section>
 <main>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
           <h2>Portfolio</h2>
           <div>
             <img
@@ -101,7 +98,7 @@
           </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
           <h2>Contact</h2>
           <div>
             <p>
@@ -115,11 +112,10 @@
           </div>
         </section>
       </div>
-    </div>
   </main> 
     <footer class="main-footer">
       <h2>Student name</h2>
-      <nav>Back to top</nav>
+      <a href="#home">Back to top</a>
     </footer>
   </body>
 </html>
