Layout 70% for mobile
Need to:
- nav box color
- contact
- footer

--- a/index.html
+++ b/index.html
@@ -5,36 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Student Name</title>
   </head>
   <body>
-      <nav id="home">
-          <h1 class="name">Student Name</h1>
-          <ul class="main-nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-
+    <nav id="home">
+      <h1 class="name">Student Name</h1>
+      <ul class="main-nav">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
       <div class="container">
-        <section class="profile">
-          <div class="profile-info">
-            <img class="profile-img"
-              src="images/responsive-layout-profile.png"
-              alt="profile picture"
-            />
-            <p>
-              Hi! I'm a front-end developer who loves responsive design and css.
-              I recently finished a degree in front-end web development at
-              Treehouse and am excited to put all my skills to use!
-            </p>
-          </div>
+        <section class="box profile">
+          <img
+            class="profile-img"
+            src="images/responsive-layout-profile.png"
+            alt="profile picture"
+          />
+          <p>
+            Hi! I'm a front-end developer who loves responsive design and css. I
+            recently finished a degree in front-end web development at Treehouse
+            and am excited to put all my skills to use!
+          </p>
         </section>
-<main>
-        <section class="portfolio" id="portfolio">
+
+        <section class="box 1">
           <h2>Portfolio</h2>
           <div>
             <img
@@ -47,72 +49,71 @@
               a specific business I'm interested in.
             </p>
           </div>
-          <div>
-            <img
-              src="images/portfolio-2.png"
-              alt="example search engine website image"
-            />
-            <h3>Search Page</h3>
-            <p>
-              This project searches through a specific database to find
-              information that the user is trying to look up.
-            </p>
-          </div>
-          <div>
-            <img
-              src="images/portfolio-3.png"
-              alt="example travel website image "
-            />
-            <h3>Travel App</h3>
-            <p>
-              This project compares travel times based on different
-              transportation methods and tells you the best one.
-            </p>
-          </div>
-          <div>
-            <img src="images/portfolio-4.png" alt="example maps website" />
-            <h3>Map of Favourite Spots</h3>
-            <p>
-              This project uses mapping apis to plot points for my favourite
-              spots in the city for a do-it yourself walking tour.
-            </p>
-          </div>
-          <div>
-            <img
-              src="images/portfolio-5.png"
-              alt="example photo gallery website"
-            />
-            <h3>Photo Gallery</h3>
-            <p>
-              This project shows pictures from a recent trip to the viewer and
-              allows them to easily navigate through photos.
-            </p>
-          </div>
-          <div>
-            <img src="images/portfolio-6.png" alt="example calculator webapp" />
-            <h3>Calculator</h3>
-            <p>
-              Someone can enter in the numbers they want, and press the big blue
-              button to get the result.
-            </p>
-          </div>
         </section>
-
-        <section class="contact" id="contact">
-          <h2>Contact</h2>
-          <div>
-            <p>
-              If you're interested in chatting or want more information about
-              what I've been working on, I'd love to hear from you!
-            </p>
-          </div>
-          <div>
-            <p>Phone +1(111)555-1234</p>
-            <p>Email email@yoursite.com</p>
-          </div>
+        <section class="box 2">
+          <img
+            src="images/portfolio-2.png"
+            alt="example search engine website image"
+          />
+          <h3>Search Page</h3>
+          <p>
+            This project searches through a specific database to find
+            information that the user is trying to look up.
+          </p>
+        </section>
+        <section class="box 3">
+          <img
+            src="images/portfolio-3.png"
+            alt="example travel website image "
+          />
+          <h3>Travel App</h3>
+          <p>
+            This project compares travel times based on different transportation
+            methods and tells you the best one.
+          </p>
+        </section>
+        <section class="box 4">
+          <img src="images/portfolio-4.png" alt="example maps website" />
+          <h3>Map of Favourite Spots</h3>
+          <p>
+            This project uses mapping apis to plot points for my favourite spots
+            in the city for a do-it yourself walking tour.
+          </p>
+        </section>
+        <section class="box 5">
+          <img
+            src="images/portfolio-5.png"
+            alt="example photo gallery website"
+          />
+          <h3>Photo Gallery</h3>
+          <p>
+            This project shows pictures from a recent trip to the viewer and
+            allows them to easily navigate through photos.
+          </p>
+        </section>
+        <section class="box 6">
+          <img src="images/portfolio-6.png" alt="example calculator webapp" />
+          <h3>Calculator</h3>
+          <p>
+            Someone can enter in the numbers they want, and press the big blue
+            button to get the result.
+          </p>
         </section>
       </div>
-  </main> 
+      <section class="contact">
+        <h2>Contact</h2>
+        <div>
+          <p>
+            If you're interested in chatting or want more information about what
+            I've been working on, I'd love to hear from you!
+          </p>
+        </div>
+        <div>
+          <p>Phone +1(111)555-1234</p>
+          <p>Email email@yoursite.com</p>
+        </div>
+      </section>
+    </main>
     <footer class="main-footer">
       <h2>Student name</h2>
       <a href="#home">Back to top</a>
