--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
+      rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Student Name</title>
   </head>
   <body>
     <nav id="home">
       <h1 class="name">Student Name</h1>
       <ul class="main-nav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
     <main>
@@ -28,7 +27,7 @@
             class="profile-img"
             src="images/responsive-layout-profile.png"
             alt="profile picture"
-          />
+          >
           <p>
             Hi! I'm a front-end developer who loves responsive design and css. I
             recently finished a degree in front-end web development at Treehouse
@@ -42,7 +41,7 @@
             <img
               src="images/portfolio-1.png"
               alt="example website layout image"
-            />
+            >
 
             <h3>Marketing Page</h3>
             <p>
@@ -56,7 +55,7 @@
           <img
             src="images/portfolio-2.png"
             alt="example search engine website image"
-          />
+          >
           <h3>Search Page</h3>
           <p>
             This project searches through a specific database to find
@@ -67,7 +66,7 @@
           <img
             src="images/portfolio-3.png"
             alt="example travel website image "
-          />
+          >
           <h3>Travel App</h3>
           <p>
             This project compares travel times based on different transportation
@@ -75,7 +74,7 @@
           </p>
         </section>
         <section class="box 4">
-          <img src="images/portfolio-4.png" alt="example maps website" />
+          <img src="images/portfolio-4.png" alt="example maps website" >
           <h3>Map of Favourite Spots</h3>
           <p>
             This project uses mapping apis to plot points for my favourite spots
@@ -86,7 +85,7 @@
           <img
             src="images/portfolio-5.png"
             alt="example photo gallery website"
-          />
+          >
           <h3>Photo Gallery</h3>
           <p>
             This project shows pictures from a recent trip to the viewer and
@@ -94,7 +93,7 @@
           </p>
         </section>
         <section class="box 6">
-          <img src="images/portfolio-6.png" alt="example calculator webapp" />
+          <img src="images/portfolio-6.png" alt="example calculator webapp" >
           <h3>Calculator</h3>
           <p>
             Someone can enter in the numbers they want, and press the big blue
@@ -114,13 +113,14 @@
           <p>Phone +1(111)555-1234</p>
           <p>Email email@yoursite.com</p>
         </div>
+        <hr>
       </section>
     </main>
     <footer>
-      <ul class="main-footer">
-      <li><a href="#home">Student name</a></li>
-      <li><a href="#home">Back to top</a></li>
-      </ul>
+      <div class="main-footer">
+      <a href="#home">Student name</a>
+      <a href="#home">BACK TO TOP</a>
+      </div>
     </footer>
   </body>
 </html>
