--- a/index.html
+++ b/index.html
@@ -13,95 +13,93 @@
     <title>Student Name</title>
   </head>
   <body>
-    <nav id="home">
-      <h1 class="name">Student Name</h1>
-      <ul class="main-nav">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-      </ul>
-    </nav>
-    <main>
-      <div class="container">
-        <section class="box" id="profile">
+    <div class="container">
+      <nav id="home">
+        <h1 class="name">Student Name</h1>
+        <ul class="main-nav">
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </nav>
+
+      <div class="item" id="profile">
+        <div>
           <img
-            class="profile-img"
             src="images/responsive-layout-profile.png"
             alt="profile picture"
           />
-          <p>
-            Hi! I'm a front-end developer who loves responsive design and css. I
-            recently finished a degree in front-end web development at Treehouse
-            and am excited to put all my skills to use!
-          </p>
-        </section>
-
-        <section class="box 1" id="portfolio">
-          <h2>Portfolio</h2>
-          <div>
-            <img
-              src="images/portfolio-1.png"
-              alt="example website layout image"
-            />
-
-            <h3>Marketing Page</h3>
-            <p>
-              This project shows the front page of a marketing website meant for
-              a specific business I'm interested in.
-            </p>
-          </div>
-        </section>
-        <section class="box 2">
-          <img
-            src="images/portfolio-2.png"
-            alt="example search engine website image"
-          />
-          <h3>Search Page</h3>
-          <p>
-            This project searches through a specific database to find
-            information that the user is trying to look up.
-          </p>
-        </section>
-        <section class="box 3">
-          <img
-            src="images/portfolio-3.png"
-            alt="example travel website image "
-          />
-          <h3>Travel App</h3>
-          <p>
-            This project compares travel times based on different transportation
-            methods and tells you the best one.
-          </p>
-        </section>
-        <section class="box 4">
-          <img src="images/portfolio-4.png" alt="example maps website" />
-          <h3>Map of Favourite Spots</h3>
-          <p>
-            This project uses mapping apis to plot points for my favourite spots
-            in the city for a do-it yourself walking tour.
-          </p>
-        </section>
-        <section class="box 5">
-          <img
-            src="images/portfolio-5.png"
-            alt="example photo gallery website"
-          />
-          <h3>Photo Gallery</h3>
-          <p>
-            This project shows pictures from a recent trip to the viewer and
-            allows them to easily navigate through photos.
-          </p>
-        </section>
-        <section class="box 6">
-          <img src="images/portfolio-6.png" alt="example calculator webapp" />
-          <h3>Calculator</h3>
-          <p>
-            Someone can enter in the numbers they want, and press the big blue
-            button to get the result.
-          </p>
-        </section>
+        </div>
+        <p>
+          Hi! I'm a front-end developer who loves responsive design and css. I
+          recently finished a degree in front-end web development at Treehouse
+          and am excited to put all my skills to use!
+        </p>
       </div>
-      <section class="box" id="contact">
+
+      <div class="item-1 item" id="portfolio">
+        <h2>Portfolio</h2>
+        <div>
+          <img
+            src="images/portfolio-1.png"
+            alt="example website layout image"
+          />
+
+          <h3>Marketing Page</h3>
+          <p>
+            This project shows the front page of a marketing website meant for a
+            specific business I'm interested in.
+          </p>
+        </div>
+      </div>
+      <div class="item-2 item">
+        <img
+          src="images/portfolio-2.png"
+          alt="example search engine website image"
+        />
+        <h3>Search Page</h3>
+        <p>
+          This project searches through a specific database to find information
+          that the user is trying to look up.
+        </p>
+        /
+      </div>
+
+      <div class="item-3 item">
+        <img src="images/portfolio-3.png" alt="example travel website image " />
+        <h3>Travel App</h3>
+        <p>
+          This project compares travel times based on different transportation
+          methods and tells you the best one.
+        </p>
+      </div>
+
+      <div class="item-4 item">
+        <img src="images/portfolio-4.png" alt="example maps website" />
+        <h3>Map of Favourite Spots</h3>
+        <p>
+          This project uses mapping apis to plot points for my favourite spots
+          in the city for a do-it yourself walking tour.
+        </p>
+      </div>
+      <div class="item-5 item">
+        <img src="images/portfolio-5.png" alt="example photo gallery website" />
+        <h3>Photo Gallery</h3>
+        <p>
+          This project shows pictures from a recent trip to the viewer and
+          allows them to easily navigate through photos.
+        </p>
+      </div>
+      <div class="item-6 item">
+        <img src="images/portfolio-6.png" alt="example calculator webapp" />
+        <h3>Calculator</h3>
+        <p>
+          Someone can enter in the numbers they want, and press the big blue
+          button to get the result.
+        </p>
+      </div>
+
+      <div class="item" id="contact">
         <h2>Contact</h2>
         <div>
           <p>
@@ -116,13 +114,13 @@
           </p>
         </div>
         <hr />
-      </section>
-    </main>
-    <footer>
-      <div class="main-footer">
-        <a href="#home">Student name</a>
-        <a href="#home">BACK TO TOP</a>
       </div>
-    </footer>
+      <footer>
+        <div class="main-footer">
+          <a href="#home">Student name</a>
+          <a href="#home">BACK TO TOP</a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
