--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="item" id="profile">
         <div>
-          <img
+          <img class="dp"
             src="images/responsive-layout-profile.png"
             alt="profile picture"
           />
@@ -36,9 +36,10 @@
           and am excited to put all my skills to use!
         </p>
       </div>
-
+      <h2>Portfolio</h2>
+      <div class="examples"></div>
       <div class="item-1 item" id="portfolio">
-        <h2>Portfolio</h2>
+        
         <div>
           <img
             src="images/portfolio-1.png"
@@ -62,7 +63,7 @@
           This project searches through a specific database to find information
           that the user is trying to look up.
         </p>
-        /
+        
       </div>
 
       <div class="item-3 item">
@@ -98,7 +99,7 @@
           button to get the result.
         </p>
       </div>
-
+    </div>
       <div class="item" id="contact">
         <h2>Contact</h2>
         <div>
