--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="item-1 item" id="portfolio">
         
         <div>
-          <img
+          <img class="eg"
             src="images/portfolio-1.png"
             alt="example website layout image"
           />
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="item-2 item">
-        <img
+        <img class="eg"
           src="images/portfolio-2.png"
           alt="example search engine website image"
         />
@@ -67,7 +67,7 @@
       </div>
 
       <div class="item-3 item">
-        <img src="images/portfolio-3.png" alt="example travel website image " />
+        <img class="eg" src="images/portfolio-3.png" alt="example travel website image " />
         <h3>Travel App</h3>
         <p>
           This project compares travel times based on different transportation
@@ -76,7 +76,7 @@
       </div>
 
       <div class="item-4 item">
-        <img src="images/portfolio-4.png" alt="example maps website" />
+        <img class="eg" src="images/portfolio-4.png" alt="example maps website" />
         <h3>Map of Favourite Spots</h3>
         <p>
           This project uses mapping apis to plot points for my favourite spots
@@ -84,7 +84,7 @@
         </p>
       </div>
       <div class="item-5 item">
-        <img src="images/portfolio-5.png" alt="example photo gallery website" />
+        <img class="eg" src="images/portfolio-5.png" alt="example photo gallery website" />
         <h3>Photo Gallery</h3>
         <p>
           This project shows pictures from a recent trip to the viewer and
@@ -92,7 +92,7 @@
         </p>
       </div>
       <div class="item-6 item">
-        <img src="images/portfolio-6.png" alt="example calculator webapp" />
+        <img class="eg" src="images/portfolio-6.png" alt="example calculator webapp" />
         <h3>Calculator</h3>
         <p>
           Someone can enter in the numbers they want, and press the big blue
@@ -109,12 +109,14 @@
           </p>
         </div>
         <div>
-          <p>Phone +1(111)555-1234</p>
-          <p>
-            <a href="mailto:email@yoursite.com">Email email@yoursite.com</a>
-          </p>
+
+          <a class="call" href="tel:1(111)555-1234">Phone +1(111)555-1234</a>
+
+
+            <a class="call" href="mailto:email@yoursite.com">Email email@yoursite.com</a>
+
         </div>
-        <hr />
+        <hr/>
       </div>
       <footer>
         <div class="main-footer">
