Working on tablet

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <h2>Portfolio</h2>
 
-      <div class="examples"></div>
+    <div class="examples">
 
 
       <div class="item-1 item">
@@ -56,7 +56,7 @@
             This project shows the front page of a marketing website meant for a
             specific business I'm interested in.
           </p>
-        </div>
+      
       </div>
 
 
@@ -108,6 +108,7 @@
           button to get the result.
         </p>
       </div>
+    </div>
     </div>
       <div class="item" id="contact">
         <h2>Contact</h2>
