Tablet view complete
Need to correct profile image position on mobile view

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
 
-      <div class="item" id="profile">
+      <div id="profile">
         <div>
           <img class="dp"
             src="images/responsive-layout-profile.png"
@@ -38,7 +38,7 @@
         </p>
       </div>
       </div>
-      <h2>Portfolio</h2>
+      <h2 id="portfolio">Portfolio</h2>
 
     <div class="examples">
 
@@ -110,10 +110,11 @@
       </div>
     </div>
     </div>
-      <div class="item" id="contact">
+      <div id="contact">
+        <div class="contact">
         <h2>Contact</h2>
         <div>
-          <p>
+          <p class="con-text">
             If you're interested in chatting or want more information about what
             I've been working on, I'd love to hear from you!
           </p>
@@ -126,12 +127,16 @@
             <a class="call" href="mailto:email@yoursite.com">Email email@yoursite.com</a>
 
         </div>
+      </div>
         <hr/>
       </div>
       <footer>
         <div class="main-footer">
-          <a href="#home">Student name</a>
-          <a href="#home">BACK TO TOP</a>
+          <a class="name" href="#home">Student name</a>
+          <a class="small" href="#home">BACK TO TOP</a>
+          <a class="full" href="#home">HOME</a>
+          <a class="full" href="#portfolio">PORTFOLIO</a>
+          <a class="full" href="#contact">CONTACT</a>
         </div>
       </footer>
     </div>
