--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
+      rel="stylesheet">
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" 
+      rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Student Name</title>
   </head>
   <body>
@@ -19,6 +21,7 @@
         <ul class="main-nav">
           <li><a href="#home">HOME</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#skills">SKILLS</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </nav>
@@ -27,8 +30,7 @@
         <div>
           <img class="dp"
             src="images/responsive-layout-profile.png"
-            alt="profile picture"
-          />
+            alt="profile picture">
         </div>
         <div>
         <p class="bio">
@@ -49,8 +51,7 @@
         
           <img class="eg"
             src="images/portfolio-1.png"
-            alt="example website layout image"
-          />
+            alt="example website layout image">
 
           <h3>Marketing Page</h3>
           <p>
@@ -64,8 +65,7 @@
       <div class="item-2 item">
         <img class="eg"
           src="images/portfolio-2.png"
-          alt="example search engine website image"
-        />
+          alt="example search engine website image">
         <h3>Search Page</h3>
         <p>
           This project searches through a specific database to find information
@@ -77,7 +77,7 @@
 
 
       <div class="item-3 item">
-        <img class="eg" src="images/portfolio-3.png" alt="example travel website image " />
+        <img class="eg" src="images/portfolio-3.png" alt="example travel website image ">
         <h3>Travel App</h3>
         <p>
           This project compares travel times based on different transportation
@@ -86,7 +86,7 @@
       </div>
 
       <div class="item-4 item">
-        <img class="eg" src="images/portfolio-4.png" alt="example maps website" />
+        <img class="eg" src="images/portfolio-4.png" alt="example maps website">
         <h3>Map of Favourite Spots</h3>
         <p>
           This project uses mapping apis to plot points for my favourite spots
@@ -94,7 +94,7 @@
         </p>
       </div>
       <div class="item-5 item">
-        <img class="eg" src="images/portfolio-5.png" alt="example photo gallery website" />
+        <img class="eg" src="images/portfolio-5.png" alt="example photo gallery website">
         <h3>Photo Gallery</h3>
         <p>
           This project shows pictures from a recent trip to the viewer and
@@ -102,7 +102,7 @@
         </p>
       </div>
       <div class="item-6 item">
-        <img class="eg" src="images/portfolio-6.png" alt="example calculator webapp" />
+        <img class="eg" src="images/portfolio-6.png" alt="example calculator webapp">
         <h3>Calculator</h3>
         <p>
           Someone can enter in the numbers they want, and press the big blue
@@ -110,6 +110,19 @@
         </p>
       </div>
     </div>
+    </div>
+
+    <div id="skills">
+      <h4>MY SKILLS</h4>
+
+      <ul>
+        <li>Adobe Premiere Pro</li>
+        <li>Adobe Photoshop</li>
+        <li>Software Development</li>
+        <li>Making Coffee</li>
+      </ul>
+
+
     </div>
       <div id="contact">
         <div class="contact">
@@ -129,7 +142,7 @@
 
         </div>
       </div>
-        <hr/>
+        <hr>
       </div>
       <footer>
         <div class="main-footer">
@@ -137,9 +150,9 @@
           <a class="small" href="#home">BACK TO TOP</a>
           <a class="full" href="#home">HOME</a>
           <a class="full" href="#portfolio">PORTFOLIO</a>
+          <a class="full" href="#skills">SKILLS</a>
           <a class="full" href="#contact">CONTACT</a>
         </div>
       </footer>
-    </div>
   </body>
 </html>
